Viacoin: swapped a lot of occurences of "Bitcoin" to "Viacoin"

--- a/src/assets/i18n/po/template.pot
+++ b/src/assets/i18n/po/template.pot
@@ -120,7 +120,7 @@ msgid "All addresses"
 msgstr ""
 
 msgid ""
-"All of your bitcoin wallet balance may not be available for immediate "
+"All of your viacoin wallet balance may not be available for immediate "
 "spending."
 msgstr ""
 
@@ -163,14 +163,14 @@ msgid ""
 "latest version."
 msgstr ""
 
-msgid "Anyone with your recovery phrase can access or spend your bitcoin."
+msgid "Anyone with your recovery phrase can access or spend your viacoin."
 msgstr ""
 
 msgid "Apply changes"
 msgstr ""
 
 msgid ""
-"Approximate Bitcoin network fee to transfer wallet's balance (with normal "
+"Approximate Viacoin network fee to transfer wallet's balance (with normal "
 "priority)"
 msgstr ""
 
@@ -256,7 +256,7 @@ msgstr ""
 msgid "BitPay Card URI"
 msgstr ""
 
-msgid "Bitcoin Address"
+msgid "Viacoin Address"
 msgstr ""
 
 msgid "Bitcoin Cash Address"
@@ -268,7 +268,7 @@ msgstr ""
 msgid "Bitcoin Cash Wallets"
 msgstr ""
 
-msgid "Bitcoin Network Fee Policy"
+msgid "Viacoin Network Fee Policy"
 msgstr ""
 
 msgid "Bitcoin URI"
@@ -277,22 +277,22 @@ msgstr ""
 msgid "Bitcoin Wallets"
 msgstr ""
 
-msgid "Bitcoin is a currency."
+msgid "Viacoin is a currency."
 msgstr ""
 
 msgid "Bitcoin is different - it cannot be safely held with a bank or web service."
 msgstr ""
 
-msgid "Bitcoin is secure, digital money."
+msgid "Viacoin is secure, digital money."
 msgstr ""
 
 msgid "Bitcoin miner fee:"
 msgstr ""
 
-msgid "Bitcoin network fee policy"
+msgid "Viacoin network fee policy"
 msgstr ""
 
-msgid "Bitcoin transactions include a fee collected by miners on the network."
+msgid "Viacoin transactions include a fee collected by miners on the network."
 msgstr ""
 
 msgid "Broadcast Payment"
@@ -690,7 +690,7 @@ msgid "Duplicating wallet..."
 msgstr ""
 
 msgid ""
-"Each bitcoin wallet can generate billions of addresses from your 12-word "
+"Each viacoin wallet can generate billions of addresses from your 12-word "
 "recovery phrase. A new address is automatically generated and shown each "
 "time you receive a payment."
 msgstr ""
@@ -923,7 +923,7 @@ msgid ""
 "fees may apply."
 msgstr ""
 
-msgid "Get news and updates from BitPay"
+msgid "Get news and updates from the Viacoin team"
 msgstr ""
 
 msgid "Get started"
@@ -1005,7 +1005,7 @@ msgstr ""
 
 msgid ""
 "I understand that if this app is moved to another device or deleted, my "
-"bitcoin can only be recovered with the recovery phrase"
+"viacoin can only be recovered with the recovery phrase"
 msgstr ""
 
 msgid ""
@@ -1133,7 +1133,7 @@ msgstr ""
 
 msgid ""
 "It's a good idea to avoid reusing addresses - this both protects your "
-"privacy and keeps your bitcoins secure against hypothetical attacks by "
+"privacy and keeps your viacoin secure against hypothetical attacks by "
 "quantum computers."
 msgstr ""
 
@@ -1298,7 +1298,7 @@ msgstr ""
 msgid "No Private Key"
 msgstr ""
 
-msgid "No backup, no bitcoin."
+msgid "No backup, no viacoin."
 msgstr ""
 
 msgid "No contacts yet"
@@ -1358,7 +1358,7 @@ msgstr ""
 msgid "Not enough funds for fee"
 msgstr ""
 
-msgid "Not even BitPay can access it."
+msgid "Not even the Viacoin team can access it."
 msgstr ""
 
 msgid ""
@@ -1371,7 +1371,7 @@ msgstr ""
 msgid "Not right now"
 msgstr ""
 
-msgid "Not valid bitcoin address"
+msgid "Not valid viacoin address"
 msgstr ""
 
 msgid "Note"
@@ -1768,7 +1768,7 @@ msgstr ""
 msgid "Search a contact"
 msgstr ""
 
-msgid "Search or enter bitcoin address"
+msgid "Search or enter viacoin address"
 msgstr ""
 
 msgid "Search your currency"
@@ -1789,7 +1789,7 @@ msgstr ""
 msgid "Self-signed Certificate"
 msgstr ""
 
-msgid "Selling Bitcoin..."
+msgid "Selling Viacoin..."
 msgstr ""
 
 msgid "Send"
@@ -1944,7 +1944,7 @@ msgstr ""
 msgid "Spendable balance"
 msgstr ""
 
-msgid "Spending this balance will need significant Bitcoin network fees"
+msgid "Spending this balance will need significant Viacoin network fees"
 msgstr ""
 
 msgid "Start"
@@ -1977,7 +1977,7 @@ msgstr ""
 msgid "THIS ACTION CANNOT BE REVERSED"
 msgstr ""
 
-msgid "Take control of your money, get started with bitcoin."
+msgid "Take control of your money, get started with viacoin."
 msgstr ""
 
 msgid "Tap and hold to show"
@@ -2007,18 +2007,18 @@ msgstr ""
 msgid "The Wallet Service URL"
 msgstr ""
 
-msgid "The amount of bitcoin immediately spendable from this wallet."
+msgid "The amount of viacoin immediately spendable from this wallet."
 msgstr ""
 
 msgid ""
-"The amount of bitcoin stored in this wallet that is allocated as inputs to "
+"The amount of viacoin stored in this wallet that is allocated as inputs to "
 "your pending transaction proposals. The amount is determined using unspent "
 "transaction outputs associated with this wallet and may be more than the "
 "actual amounts associated with your pending transaction proposals."
 msgstr ""
 
 msgid ""
-"The amount of bitcoin stored in this wallet with less than 1 blockchain "
+"The amount of viacoin stored in this wallet with less than 1 blockchain "
 "confirmation."
 msgstr ""
 
@@ -2108,10 +2108,10 @@ msgstr ""
 msgid "This app is not available for your device."
 msgstr ""
 
-msgid "This app stores your bitcoin with cutting-edge security."
+msgid "This app stores your viacoin with cutting-edge security."
 msgstr ""
 
-msgid "This bitcoin payment request has expired."
+msgid "This viacoin payment request has expired."
 msgstr ""
 
 msgid ""
@@ -2139,8 +2139,8 @@ msgid ""
 msgstr ""
 
 msgid ""
-"This transaction amount is too small compared to current Bitcoin network "
-"fees. Spending these funds will need a Bitcoin network fee cost comparable "
+"This transaction amount is too small compared to current Viacoin network "
+"fees. Spending these funds will need a Viacoin network fee cost comparable "
 "to the funds itself."
 msgstr ""
 
@@ -2160,7 +2160,7 @@ msgstr ""
 msgid "To"
 msgstr ""
 
-msgid "To get started, you'll need to create a bitcoin wallet and get some bitcoin."
+msgid "To get started, you'll need to create a viacoin wallet and get some viacoin."
 msgstr ""
 
 msgid "To {{reason}} you must first add your BitPay account - {{email}}"
@@ -2222,7 +2222,7 @@ msgstr ""
 msgid "Transfer to Bitcoin Cash Wallet"
 msgstr ""
 
-msgid "Transfer to Bitcoin Wallet"
+msgid "Transfer to Viacoin Wallet"
 msgstr ""
 
 msgid "Transfer to Contact"
@@ -2531,7 +2531,7 @@ msgid ""
 "translation website. We’re looking forward to hearing from you!"
 msgstr ""
 
-msgid "You can scan bitcoin addresses, payment requests, paper wallets, and more."
+msgid "You can scan viacoin addresses, payment requests, paper wallets, and more."
 msgstr ""
 
 msgid ""
@@ -2539,7 +2539,7 @@ msgid ""
 "by visiting our project on GitHub."
 msgstr ""
 
-msgid "You can spend bitcoin at millions of websites and stores worldwide."
+msgid "You can spend viacoin at millions of websites and stores worldwide."
 msgstr ""
 
 msgid "You can still export it from \"Export Wallet\" option."
@@ -2553,7 +2553,7 @@ msgid ""
 "everyday expenses like utilities and metro rides."
 msgstr ""
 
-msgid "You control your bitcoin."
+msgid "You control your viacoin."
 msgstr ""
 
 msgid "You could sign the transaction later in your wallet details"
@@ -2570,10 +2570,13 @@ msgstr ""
 msgid "Your bitcoin wallet is ready!"
 msgstr ""
 
+msgid "Your viacoin wallet is ready!"
+msgstr ""
+
 msgid ""
-"Your extended private keys are all that is needed to access your bitcoin "
+"Your extended private keys are all that is needed to access your viacoin "
 "funds. Be sure to protect your private keys and store them only on secure "
-"devices. BitPay does not have access to your private keys, so you alone are "
+"devices. the Viacoin team does not have access to your private keys, so you alone are "
 "responsible for your keys. If you share key access with external services, "
 "you take responsibility for the risk of theft or breach. Only advanced "
 "users should handle extended private keys directly."
@@ -2634,9 +2637,9 @@ msgid "{coinName} miner fees unusually high"
 msgstr ""
 
 msgid ""
-"{{appName}} depends on Bitcore Wallet Service (BWS) for blockchain "
+"{{appName}} depends on Viacore Wallet Service (BWS) for blockchain "
 "information, networking and Copayer synchronization. The default "
-"configuration points to https://bws.bitpay.com (BitPay's public BWS "
+"configuration points to https://vws.viacoin.org (Viacoin's public BWS "
 "instance)."
 msgstr ""
 
